force-app/main/default/objects/Driver__c/Driver__c.object-meta.xml
<CustomObject>
    <description>Pronto delivery drivers. Holds availability and last-known GPS coordinates used during live delivery and disruption handling. (In production GPS/telemetry federate from Snowflake; modeled in Salesforce here for v1 test data.)</description>
    <label>Driver</label>
    <nameField>
        <label>Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>