force-app/main/default/objects/Driver__c/fields/Current_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Current_Latitude__c</fullName>
    <label>Current Latitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>