force-app/main/default/objects/Driver__c/fields/Current_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Current_Longitude__c</fullName>
    <label>Current Longitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>