force-app/main/default/objects/Driver__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <description>The type of vehicle the driver uses for deliveries. Informs routing and delivery-time expectations.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Bike</fullName><default>false</default><label>Bike</label></value>
            <value><fullName>Car</fullName><default>false</default><label>Car</label></value>
            <value><fullName>Scooter</fullName><default>false</default><label>Scooter</label></value>
            <value><fullName>Electric Bike</fullName><default>false</default><label>Electric Bike</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>